# Customized-C-memory-management.

./: .gitignore  .install.bat  .memlib_build_flags.txt  .memlib_compile_flags.txt  .travis.yml  .uninstall.bat  CMakeLists.txt  README  README.md  TODO  install.bat  install.sh  uninstall.sh
Testing/: .gitignore  Header.h  TODO  alloc_strat.h  allocator.h  base_domain.cpp  base_domain.h  basic_perf_test.cpp  domains.h  env_maccro.h  log_new.cpp  main.cpp  memlib_tests.cpp  nq_allocator.h  nq_deleter.h  nq_deque.h  nq_forward_list.h  nq_list.h  nq_log_printer.cpp  nq_memlib_allocate.h  nq_memlib_new.h  nq_memlib_tools.h  nq_multimap.h  nq_multiset.h  nq_new.cpp  nq_new.h  nq_new.hxx  nq_set.h  nq_shared.h  nq_unique.h  nq_unordered_map.h  nq_unordered_multimap.h  nq_unordered_multiset.h  nq_unordered_set.h  nq_vector.h  tracer.cpp  tracer.h  type_to_string.h
VcNqMem/: VcNqMem.sln
VcNqMem/VcNqMem/: VcNqMem.vcxproj  VcNqMem.vcxproj.filters
domains/nq_memlib/: domains.h  log_path.h.sample
include/nq_memlib/: alloc_strat.h  base_domain.h  domains.h  env_maccro.h  lib_domains.h  nq_allocator.h  nq_deleter.h  nq_deque.h  nq_forward_list.h  nq_list.h  nq_map.h  nq_memlib_new.h  nq_memlib_tools.h  nq_multimap.h  nq_multiset.h  nq_new.h  nq_set.h  nq_shared.h  nq_unique.h  nq_unordered_map.h  nq_unordered_multimap.h  nq_unordered_multiset.h  nq_unordered_set.h  nq_vector.h  tree.h  type_to_string.h
source/: base_domain.cpp  nq_log_printer.cpp  nq_new.cpp
tests/: CMakeLists.txt  test.sh
tests/include/: domains.h  domains_decl.h
tests/source/: basic_perf_test.cpp  main.cpp  memlib_tests.cpp  test_domains.h
